2010-09-07  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Darin Adler.

        Media elements should derive from ActiveDOMObjects
        https://bugs.webkit.org/show_bug.cgi?id=45306
        <rdar://problem/7929062>

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::HTMLMediaElement): Initialize ActiveDOMObject
        (WebCore::HTMLMediaElement::stop): Call suspend, we want to do the same thing in both cases.
        (WebCore::HTMLMediaElement::suspend): Rename from documentWillBecomeInactive.
        (WebCore::HTMLMediaElement::resume): Rename from documentDidBecomeActive.
        (WebCore::HTMLMediaElement::hasPendingActivity): Return true if the event queue is not empty
        so the element can't be collected before they are sent.
        * html/HTMLMediaElement.h:
        (WebCore::HTMLMediaElement::canSuspend):



Canonical link: https://commits.webkit.org/57653@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66895 268f45cc-cd09-0410-ab3c-d52691b4dbfc